2010-04-24  Christian Franke  <franke@computer.org>

	* Makefile.in (TARGET_LDFLAGS): Add -static-libgcc.
	(kernel_img_LDFLAGS): Remove -static-libgcc.

2010-04-24  Christian Franke  <franke@computer.org>

	* configure.ac: Do not CHECK_BSS_START_SYMBOL
	and CHECK_END_SYMBOL if grub-emu is built.
	Unset TARGET_OBJ2ELF if grub-emu is built
	without module support.

2010-04-24  Jiro SEKIBA <jir@unicus.jp>

	Nilfs2 support.

	* conf/common.rmk (grub_probe_SOURCES): Add fs/nilfs2.c.
	(grub_fstest_SOURCES): Likewise.
	(pkglib_MODULES): Add nilfs2.mod.
	(nilfs2_mod_SOURCES): New variable.
	(nilfs2_mod_CFLAGS): Likewise.
	(nilfs2_mod_LDFLAGS): Likewise.
	* conf/i386-pc.rmk (grub_setup_SOURCES): Add fs/nilfs2.c.
	* conf/sparc64-ieee1275.rmk (grub_setup_SOURCES): Add fs/nilfs2.c.
	* fs/nilfs2.c: New file.

2010-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Refuse to compile for x86_64-efi is mcmodel=large
	is not supported.

2010-04-19  Grégoire Sutre  <gregoire.sutre@gmail.com>

	Add grub-mkconfig support for NetBSD.

	* util/grub.d/10_netbsd.in: grub-mkconfig helper script for NetBSD.
	* util/grub-mkconfig.in: export new NetBSD specific variables.
	* po/POTFILES-shell: added 10_netbsd.in.
	* util/grub-mkconfig_lib.in: check for gettext binary, default to echo.

2010-04-19  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix emu build with grub-emu-pci and grub-emu-modules.

	* include/grub/util/misc.h: Export grub_util_{info,error,warn}
	functions.
	* include/grub/libpciaccess.h: New file.
	* conf/any-emu.rmk: Update kernel headers for emu build.

2010-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/udf.c (grub_udf_iterate_dir): Silence a spurious warning.

2010-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/udf.c (grub_udf_iterate_dir): Decode the Unicode filenames.

2010-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* boot/sparc64/ieee1275/boot.S: Various size-reducing changes.
	Retrieve chosen/bootpath if bootpath isn't hardcoded.